[gd_scene load_steps=14 format=3 uid="uid://3hwq61ji0uqy"]

[ext_resource type="PackedScene" uid="uid://csx38lntfghur" path="res://scenes/board.tscn" id="1_o5qli"]
[ext_resource type="Script" uid="uid://bcc6iqs7c4reg" path="res://scenes/main.gd" id="1_tipki"]
[ext_resource type="PackedScene" uid="uid://djm1uogg1uu8l" path="res://scenes/brickWall.tscn" id="2_0wfyh"]
[ext_resource type="PackedScene" uid="uid://hk06oa5vd2ip" path="res://scenes/lectern.tscn" id="3_sugp2"]
[ext_resource type="Material" uid="uid://crcvs8tmwqnqh" path="res://textures/blackOutline.tres" id="7_85g3d"]
[ext_resource type="PackedScene" uid="uid://cpeuhxkwia0g4" path="res://scenes/ui.tscn" id="7_o6xl0"]
[ext_resource type="PackedScene" uid="uid://cxijvavgnysio" path="res://scenes/player.tscn" id="7_tipki"]
[ext_resource type="PackedScene" uid="uid://bsp0h4gn5q773" path="res://scenes/bag.tscn" id="9_85g3d"]
[ext_resource type="Script" uid="uid://ctah8k6r8auhg" path="res://scenes/hud.gd" id="9_choun"]

[sub_resource type="Sky" id="Sky_85g3d"]

[sub_resource type="Environment" id="Environment_tefeu"]
background_mode = 2
background_color = Color(0.4071524, 0.49325198, 0.5770381, 1)
sky = SubResource("Sky_85g3d")
sdfgi_enabled = true

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_0wfyh"]

[sub_resource type="GDScript" id="GDScript_85g3d"]

[node name="Main" type="Node3D" node_paths=PackedStringArray("cameras")]
script = ExtResource("1_tipki")
game_state = 0
cameras = [NodePath("Camera3D"), NodePath("world/Player/cameraPivot/MainCamera")]

[node name="world" type="Node3D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="world"]
environment = SubResource("Environment_tefeu")

[node name="room" type="Node3D" parent="world"]

[node name="brickWall" parent="world/room" instance=ExtResource("2_0wfyh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.475)

[node name="SpotLight3D" type="SpotLight3D" parent="world/room"]
transform = Transform3D(1, 0, 0, 0, 0.9997763, -0.021151925, 0, 0.021151925, 0.9997763, 0, -0.031280994, 5.1542654)
spot_range = 9.013

[node name="dartArea" type="Node3D" parent="world"]

[node name="board" parent="world/dartArea" instance=ExtResource("1_o5qli")]
transform = Transform3D(-0.0050965473, 0, 0.999987, 0, 1, 0, -0.999987, 0, -0.0050965473, 0.020186663, 0.0017428994, -1.36)
physics_material_override = SubResource("PhysicsMaterial_0wfyh")

[node name="lectern" parent="world/dartArea" instance=ExtResource("3_sugp2")]
transform = Transform3D(1, 0, 0, 0, 0.97778326, 0.20961857, 0, -0.20961857, 0.97778326, 0, -1.0303969, 0.045403708)

[node name="dart_drop_target" type="Node3D" parent="world/dartArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.24008581, 0)

[node name="shop" type="Node3D" parent="world"]

[node name="shelf" type="Node3D" parent="world"]

[node name="dartBag" type="Node3D" parent="world"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.945, -0.141, 2.029)

[node name="Sketchfab_Scene" parent="world/dartBag" instance=ExtResource("9_85g3d")]
transform = Transform3D(0.15556349, 0, -0.15556349, 0, 0.22, 0, 0.15556349, 0, 0.15556349, 2.131, -0.142, -2.017)

[node name="BagViewTarget" type="Node3D" parent="world/dartBag"]
transform = Transform3D(1, 0, 0, 0, 0.990268, -0.1391731, 0, 0.1391731, 0.990268, 1.9449615, -0.004999995, -2.1159925)

[node name="Player" parent="world" instance=ExtResource("7_tipki")]
dart_material = ExtResource("7_85g3d")

[node name="DartRig" parent="world/Player" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.192)

[node name="MainCamera" parent="world/Player/cameraPivot" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.099999994)

[node name="MeshInstance3D" parent="world/Player" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.12118384, 0.10116819)
visible = false

[node name="crosshair" parent="world/Player" index="3"]
transform = Transform3D(0.015, 0, 0, 0, 0.015, 0, 0, 0, 0.015, 0, -0.04112044, -1.2364545)
visible = false

[node name="aimPlane" parent="world/Player" index="4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.2438748)

[node name="UI" parent="." instance=ExtResource("7_o6xl0")]
script = SubResource("GDScript_85g3d")

[node name="HUD" parent="UI" index="0"]
script = ExtResource("9_choun")
metadata/_edit_use_anchors_ = true

[node name="Button" parent="UI/HUD" index="0"]
offset_left = 1081.0
offset_top = 596.0
offset_right = -1.0
offset_bottom = -4.0

[node name="Control" parent="UI/HUD/button_container" index="0"]
visible = false
offset_left = 287.0
offset_top = 313.0
offset_right = 287.0
offset_bottom = 313.0
scale = Vector2(0.495, 0.495)

[node name="Polygon2D" parent="UI/HUD/button_container/Control" index="0"]
polygon = PackedVector2Array(55.721077, 0.3051796, 231.98662, -1.289235, 231.63821, 95.84351, 184.44804, 96.15795, 144.2102, 176.39523, 104.28231, 95.94523, 57.087524, 96.20141)

[node name="throw_button" parent="UI/HUD/button_container/Control" index="1"]
offset_left = 60.606033
offset_top = 10.101006
offset_right = 140.60602
offset_bottom = 84.101006

[node name="throw_cancel_button" parent="UI/HUD/button_container/Control" index="2"]
offset_left = 145.45451
offset_top = 10.101034
offset_right = 225.45451
offset_bottom = 84.101036

[node name="powerLabel" parent="UI/HUD" index="6"]
offset_left = 920.0
offset_top = 624.0
offset_right = 960.0
offset_bottom = 647.0

[node name="Crosshair" parent="UI/HUD" index="7"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="CrosshairPin" parent="UI/HUD/Crosshair" index="0"]
position = Vector2(25, 68)

[node name="CrosshairPin2" parent="UI/HUD/Crosshair" index="1"]
position = Vector2(25, 1)

[node name="CrosshairPin3" parent="UI/HUD/Crosshair" index="2"]
position = Vector2(59, 33)

[node name="CrosshairPin4" parent="UI/HUD/Crosshair" index="3"]
position = Vector2(-11, 33)

[node name="gameState" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.8015983, 0, -0.597863, 0, 1, 0, 0.597863, 0, 0.8015983, -0.8627979, 0.0018677711, -0.7994882)

[connection signal="mouse_aimed" from="world/Player" to="UI/HUD" method="_on_player_mouse_aimed"]
[connection signal="pressed" from="UI/HUD/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="UI/HUD/button_container/Control/throw_button" to="." method="_on_throw_button_pressed"]
[connection signal="pressed" from="UI/HUD/button_container/Control/throw_cancel_button" to="." method="_on_throw_cancel_button_pressed"]

[editable path="world/Player"]
[editable path="UI"]
[editable path="UI/HUD/button_container/Control"]
